[package]
name = "ProjectG03Alpha"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib = {path = "lib"}
control = {path = "lib/control"}
graphics = {path = "lib/graphics"}
data = {path = "lib/data"}
layers = {path = "lib/layers"}
state = {path = "lib/state"}
map = {path = "lib/map"}
winit = "0.29.11"
tokio = { version = "1.36.0", features = ["full"]}
anyhow = "1.0.80"
thiserror = "1.0.57"
simple-logging = "2.0.2"
log = "0.4.20"
