[package]
name = "control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
winit = "0.29.11"
graphics = {path = "../graphics"}
layers = {path = "../layers"}
state = {path = "../state"}
data = {path = "../data"}