[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = { version = "0.29.11", features = ["rwh_05"]}
vulkanalia = { version = "=0.22.0", features = ["libloading", "provisional", "window"] }
anyhow = "1.0.80"
thiserror = "1.0.57"
simple-logging = "2.0.2"
log = "0.4.20"
layers = {path = "../layers"}
tokio = { version = "1.36.0", features = ["full"]}
cgmath = "0.18.0"
png = "0.17.13"
tobj = "4.0.2"