[package]
name = "map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geojson = "0.24.1"
serde = "1.0.203"
serde_json = "1.0.120"
geo-types = "0.7.13"
rand = "0.8.5"
anyhow = "1.0.80"
thiserror = "1.0.57"